@@ -1,5 +1,13 @@
 package gov.uk.courtdata.assessment.impl;
 
+import static gov.uk.courtdata.assessment.impl.FinancialAssessmentImpl.MSG_OUTSTANDING_MEANS_ASSESSMENT_FOUND;
+import static gov.uk.courtdata.assessment.impl.FinancialAssessmentImpl.MSG_OUTSTANDING_PASSPORT_ASSESSMENT_FOUND;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import gov.uk.courtdata.assessment.mapper.FinancialAssessmentMapper;
 import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
@@ -12,8 +20,13 @@ import gov.uk.courtdata.entity.FinancialAssessmentDetailEntity;
 import gov.uk.courtdata.entity.FinancialAssessmentEntity;
 import gov.uk.courtdata.model.assessment.FinancialAssessmentDetails;
 import gov.uk.courtdata.repository.FinancialAssessmentRepository;
-import gov.uk.courtdata.repository.HardshipReviewRepository;
 import gov.uk.courtdata.repository.PassportAssessmentRepository;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
+
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -23,46 +36,41 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-
-import static gov.uk.courtdata.assessment.impl.FinancialAssessmentImpl.MSG_OUTSTANDING_MEANS_ASSESSMENT_FOUND;
-import static gov.uk.courtdata.assessment.impl.FinancialAssessmentImpl.MSG_OUTSTANDING_PASSPORT_ASSESSMENT_FOUND;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 @ExtendWith(MockitoExtension.class)
 class FinancialAssessmentImplTest {
 
     private static final Integer MOCK_FINANCIAL_ASSESSMENT_ID = 1000;
+
     @Spy
     @InjectMocks
     private FinancialAssessmentImpl financialAssessmentImpl;
+
     @Spy
     private FinancialAssessmentRepository financialAssessmentRepository;
+
     @Spy
     private PassportAssessmentRepository passportAssessmentRepository;
-    @Mock
-    private HardshipReviewRepository hardshipReviewRepository;
+
     @Mock
     private FinancialAssessmentMapper financialAssessmentMapper;
+
     @Captor
     private ArgumentCaptor<FinancialAssessmentEntity> financialAssessmentEntityArgumentCaptor;
 
     @Test
     void whenFindIsInvoked_thenAssessmentIsRetrieved() {
-        FinancialAssessmentEntity financialAssessment = FinancialAssessmentEntity.builder().id(MOCK_FINANCIAL_ASSESSMENT_ID).build();
+        FinancialAssessmentEntity financialAssessment = FinancialAssessmentEntity.builder()
+                .id(MOCK_FINANCIAL_ASSESSMENT_ID)
+                .build();
         when(financialAssessmentRepository.findById(any())).thenReturn(Optional.of(financialAssessment));
 
         Optional<FinancialAssessmentEntity> returned = financialAssessmentImpl.find(MOCK_FINANCIAL_ASSESSMENT_ID);
 
-        assertTrue(returned.isPresent());
-        assertThat(returned.get().getId()).isEqualTo(MOCK_FINANCIAL_ASSESSMENT_ID);
+        assertThat(returned)
+                .isPresent()
+                .map(FinancialAssessmentEntity::getId)
+                .get()
+                .isEqualTo(MOCK_FINANCIAL_ASSESSMENT_ID);
     }
 
     @Test
@@ -90,7 +98,8 @@ class FinancialAssessmentImplTest {
         verify(financialAssessmentImpl, never()).updateAssessmentDetails(any(), any());
         verify(financialAssessmentImpl, never()).updateChildWeightings(any(), any());
 
-        assertThat(financialAssessmentEntityArgumentCaptor.getValue().getAssessmentType()).isEqualTo("INIT");
+        assertThat(financialAssessmentEntityArgumentCaptor.getValue().getAssessmentType())
+                .isEqualTo("INIT");
     }
 
     @Test
@@ -107,7 +116,8 @@ class FinancialAssessmentImplTest {
         verify(financialAssessmentImpl, never()).updateAssessmentDetails(any(), any());
         verify(financialAssessmentImpl, never()).updateChildWeightings(any(), any());
 
-        assertThat(financialAssessmentEntityArgumentCaptor.getValue().getAssessmentType()).isEqualTo("FULL");
+        assertThat(financialAssessmentEntityArgumentCaptor.getValue().getAssessmentType())
+                .isEqualTo("FULL");
     }
 
     @Test
@@ -141,10 +151,10 @@ class FinancialAssessmentImplTest {
     @Test
     void givenInitAssessmentWithIncomeEvidence_whenUpdateIsInvoked_thenIncomeEvidenceAreUpdated() {
         FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentWithIncomeEvidence();
-        FinancialAssessmentEntity financialAssessmentEntity = TestEntityDataBuilder.getFinancialAssessmentEntityWithIncomeEvidence();
-        financialAssessmentEntity.getFinAssIncomeEvidences().get(0).setId(123);
-        when(financialAssessmentRepository.getReferenceById(any()))
-                .thenReturn(financialAssessmentEntity);
+        FinancialAssessmentEntity financialAssessmentEntity =
+                TestEntityDataBuilder.getFinancialAssessmentEntityWithIncomeEvidence();
+        financialAssessmentEntity.getFinAssIncomeEvidences().getFirst().setId(123);
+        when(financialAssessmentRepository.getReferenceById(any())).thenReturn(financialAssessmentEntity);
         when(financialAssessmentMapper.finAssIncomeEvidenceDTOToFinAssIncomeEvidenceEntity(any()))
                 .thenReturn(TestEntityDataBuilder.getFinAssIncomeEvidenceEntity());
         when(financialAssessmentRepository.saveAndFlush(any())).thenReturn(financialAssessmentEntity);
@@ -152,7 +162,10 @@ class FinancialAssessmentImplTest {
         FinancialAssessmentEntity response = financialAssessmentImpl.update(financialAssessment);
 
         verify(financialAssessmentRepository).saveAndFlush(any());
-        assertThat(response.getFinAssIncomeEvidences().size()).isEqualTo(1);
+
+        assertThat(response.getFinAssIncomeEvidences())
+                .asInstanceOf(InstanceOfAssertFactories.LIST)
+                .hasSize(1);
     }
 
     @Test
@@ -162,40 +175,38 @@ class FinancialAssessmentImplTest {
     }
 
     @Test
-    void givenOutstandingFinancialAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentFoundResultIsRetrieved() {
-        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any())).thenReturn(1L);
-        OutstandingAssessmentResultDTO result = financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
+    void
+            givenOutstandingFinancialAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentFoundResultIsRetrieved() {
+        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any()))
+                .thenReturn(1L);
+        OutstandingAssessmentResultDTO result =
+                financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
         assertThat(result.isOutstandingAssessments()).isTrue();
         assertThat(result.getMessage()).isEqualTo(MSG_OUTSTANDING_MEANS_ASSESSMENT_FOUND);
     }
 
     @Test
-    void givenOutstandingPassportAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentFoundResultIsRetrieved() {
-        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any())).thenReturn(0L);
-        when(passportAssessmentRepository.findOutstandingPassportAssessments(any())).thenReturn(1L);
-        OutstandingAssessmentResultDTO result = financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
+    void
+            givenOutstandingPassportAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentFoundResultIsRetrieved() {
+        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any()))
+                .thenReturn(0L);
+        when(passportAssessmentRepository.findOutstandingPassportAssessments(any()))
+                .thenReturn(1L);
+        OutstandingAssessmentResultDTO result =
+                financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
         assertThat(result.isOutstandingAssessments()).isTrue();
         assertThat(result.getMessage()).isEqualTo(MSG_OUTSTANDING_PASSPORT_ASSESSMENT_FOUND);
     }
 
     @Test
-    void givenFinancialAssessment_whenSetOldAssessmentReplacedIsInvoked_thenOldAssessmentsAreReplaced() {
-        FinancialAssessmentEntity financialAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
-
-        financialAssessmentImpl.setOldAssessmentReplaced(financialAssessment);
-
-        Integer repId = financialAssessment.getRepOrder().getId();
-
-        verify(hardshipReviewRepository).replaceOldHardshipReviews(repId, MOCK_FINANCIAL_ASSESSMENT_ID);
-        verify(passportAssessmentRepository).updateAllPreviousPassportAssessmentsAsReplaced(repId);
-        verify(financialAssessmentRepository).updatePreviousFinancialAssessmentsAsReplaced(repId, MOCK_FINANCIAL_ASSESSMENT_ID);
-    }
-
-    @Test
-    void givenNoOutstandingAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentNotFoundResultIsRetrieved() {
-        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any())).thenReturn(0L);
-        when(passportAssessmentRepository.findOutstandingPassportAssessments(any())).thenReturn(0L);
-        OutstandingAssessmentResultDTO result = financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
+    void
+            givenNoOutstandingAssessments_whenCheckForOutstandingAssessmentsIsInvoked_thenOutstandingAssessmentNotFoundResultIsRetrieved() {
+        when(financialAssessmentRepository.findOutstandingFinancialAssessments(any()))
+                .thenReturn(0L);
+        when(passportAssessmentRepository.findOutstandingPassportAssessments(any()))
+                .thenReturn(0L);
+        OutstandingAssessmentResultDTO result =
+                financialAssessmentImpl.checkForOutstandingAssessments(MOCK_FINANCIAL_ASSESSMENT_ID);
         assertThat(result.isOutstandingAssessments()).isFalse();
     }
 
@@ -204,25 +215,26 @@ class FinancialAssessmentImplTest {
         FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentDTO();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
         existingAssessment.addAssessmentDetail(
-                FinancialAssessmentDetailEntity.builder().criteriaDetailId(20).build()
-        );
+                FinancialAssessmentDetailEntity.builder().criteriaDetailId(20).build());
 
         financialAssessmentImpl.updateAssessmentDetails(financialAssessment, existingAssessment);
-        assertThat(existingAssessment.getAssessmentDetails()).asList().isEmpty();
+        assertThat(existingAssessment.getAssessmentDetails())
+                .asInstanceOf(InstanceOfAssertFactories.LIST)
+                .isEmpty();
     }
 
     @Test
     void givenExistingDetailsToBeUpdated_whenUpdateAssessmentDetailsIsInvoked_thenDetailsAreUpdated() {
-        FinancialAssessmentDTO financialAssessment =
-                TestModelDataBuilder.getFinancialAssessmentDTOWithDetails();
+        FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentDTOWithDetails();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
         existingAssessment.addAssessmentDetail(
-                FinancialAssessmentDetailEntity.builder().criteriaDetailId(40).build()
-        );
+                FinancialAssessmentDetailEntity.builder().criteriaDetailId(40).build());
         financialAssessmentImpl.updateAssessmentDetails(financialAssessment, existingAssessment);
 
-        FinancialAssessmentDetails passed = financialAssessment.getAssessmentDetails().get(0);
-        FinancialAssessmentDetailEntity updated = existingAssessment.getAssessmentDetails().get(0);
+        FinancialAssessmentDetails passed =
+                financialAssessment.getAssessmentDetails().getFirst();
+        FinancialAssessmentDetailEntity updated =
+                existingAssessment.getAssessmentDetails().getFirst();
 
         assertThat(updated.getApplicantAmount()).isEqualTo(passed.getApplicantAmount());
         assertThat(updated.getApplicantFrequency()).isEqualTo(passed.getApplicantFrequency());
@@ -232,8 +244,7 @@ class FinancialAssessmentImplTest {
 
     @Test
     void givenNewDetails_whenUpdateAssessmentDetailsIsInvoked_thenDetailsAreAdded() {
-        FinancialAssessmentDTO financialAssessment =
-                TestModelDataBuilder.getFinancialAssessmentDTOWithDetails();
+        FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentDTOWithDetails();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
 
         when(financialAssessmentMapper.financialAssessmentDetailsToFinancialAssessmentDetailsEntity(any()))
@@ -241,8 +252,10 @@ class FinancialAssessmentImplTest {
 
         financialAssessmentImpl.updateAssessmentDetails(financialAssessment, existingAssessment);
 
-        FinancialAssessmentDetails passed = financialAssessment.getAssessmentDetails().get(0);
-        FinancialAssessmentDetailEntity updated = existingAssessment.getAssessmentDetails().get(0);
+        FinancialAssessmentDetails passed =
+                financialAssessment.getAssessmentDetails().getFirst();
+        FinancialAssessmentDetailEntity updated =
+                existingAssessment.getAssessmentDetails().getFirst();
 
         assertThat(updated.getCriteriaDetailId()).isEqualTo(passed.getCriteriaDetailId());
     }
@@ -252,31 +265,31 @@ class FinancialAssessmentImplTest {
         FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentDTO();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
         existingAssessment.addChildWeighting(
-                ChildWeightingsEntity.builder().childWeightingId(20).build()
-        );
+                ChildWeightingsEntity.builder().childWeightingId(20).build());
 
         financialAssessmentImpl.updateAssessmentDetails(financialAssessment, existingAssessment);
-        assertThat(existingAssessment.getAssessmentDetails()).asList().isEmpty();
+        assertThat(existingAssessment.getAssessmentDetails())
+                .asInstanceOf(InstanceOfAssertFactories.LIST)
+                .isEmpty();
     }
 
     @Test
     void givenExistingChildWeightingsToBeUpdated_whenUpdateChildWeightingsIsInvoked_thenWeightingsAreUpdated() {
-        FinancialAssessmentDTO financialAssessment =
-                TestModelDataBuilder.getFinancialAssessmentWithChildWeightings();
+        FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentWithChildWeightings();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
-        existingAssessment.addChildWeighting(
-                ChildWeightingsEntity.builder().childWeightingId(12).noOfChildren(3).build()
-        );
+        existingAssessment.addChildWeighting(ChildWeightingsEntity.builder()
+                .childWeightingId(12)
+                .noOfChildren(3)
+                .build());
         financialAssessmentImpl.updateChildWeightings(financialAssessment, existingAssessment);
 
-        assertThat(existingAssessment.getChildWeightings().get(0).getNoOfChildren())
-                .isEqualTo(financialAssessment.getChildWeightings().get(0).getNoOfChildren());
+        assertThat(existingAssessment.getChildWeightings().getFirst().getNoOfChildren())
+                .isEqualTo(financialAssessment.getChildWeightings().getFirst().getNoOfChildren());
     }
 
     @Test
     void givenNewChildWeightings_whenUpdateChildWeightingsIsInvoked_thenWeightingsAreAdded() {
-        FinancialAssessmentDTO financialAssessment =
-                TestModelDataBuilder.getFinancialAssessmentWithChildWeightings();
+        FinancialAssessmentDTO financialAssessment = TestModelDataBuilder.getFinancialAssessmentWithChildWeightings();
         FinancialAssessmentEntity existingAssessment = TestEntityDataBuilder.getFinancialAssessmentEntity();
 
         when(financialAssessmentMapper.childWeightingsToChildWeightingsEntity(any()))
@@ -284,12 +297,13 @@ class FinancialAssessmentImplTest {
 
         financialAssessmentImpl.updateChildWeightings(financialAssessment, existingAssessment);
 
-        assertThat(existingAssessment.getChildWeightings().get(0).getChildWeightingId())
-                .isEqualTo(financialAssessment.getChildWeightings().get(0).getChildWeightingId());
+        assertThat(existingAssessment.getChildWeightings().getFirst().getChildWeightingId())
+                .isEqualTo(financialAssessment.getChildWeightings().getFirst().getChildWeightingId());
     }
 
     @Test
-    void givenNewFinancialEvidenceDTOWithNullMandatoryField_whenPopulateMandatoryFlagIsInvoked_MandatoryFieldIsNotSet() {
+    void
+            givenNewFinancialEvidenceDTOWithNullMandatoryField_whenPopulateMandatoryFlagIsInvoked_MandatoryFieldIsNotSet() {
         FinAssIncomeEvidenceDTO finAssIncomeEvidenceDTO = TestModelDataBuilder.getFinAssIncomeEvidenceDTO();
         finAssIncomeEvidenceDTO.setId(123);
         List<FinAssIncomeEvidenceDTO> finAssIncomeEvidenceDTOS = List.of(finAssIncomeEvidenceDTO);
@@ -303,7 +317,8 @@ class FinancialAssessmentImplTest {
     }
 
     @Test
-    void givenExistingFinancialEvidenceDTOWithNullMandatoryField_whenPopulateMandatoryFlagIsInvoked_MandatoryFieldIsUpdated() {
+    void
+            givenExistingFinancialEvidenceDTOWithNullMandatoryField_whenPopulateMandatoryFlagIsInvoked_MandatoryFieldIsUpdated() {
         int evidenceId = 123;
 
         FinAssIncomeEvidenceDTO finAssIncomeEvidenceDTO = TestModelDataBuilder.getFinAssIncomeEvidenceDTO();
