@@ -1,5 +1,8 @@
 package gov.uk.courtdata.hearing.processor;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+
 import gov.uk.courtdata.entity.OffenceEntity;
 import gov.uk.courtdata.entity.WqLinkRegisterEntity;
 import gov.uk.courtdata.entity.XLATOffenceEntity;
@@ -11,6 +14,13 @@ import gov.uk.courtdata.model.hearing.HearingResulted;
 import gov.uk.courtdata.repository.OffenceRepository;
 import gov.uk.courtdata.repository.WqLinkRegisterRepository;
 import gov.uk.courtdata.repository.XLATOffenceRepository;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -18,13 +28,8 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
-
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-
 @ExtendWith(MockitoExtension.class)
-public class CourtApplicationsPreProcessorTest {
+class CourtApplicationsPreProcessorTest {
 
     @InjectMocks
     private CourtApplicationsPreProcessor courtApplicationsPreProcessor;
@@ -38,156 +43,178 @@ public class CourtApplicationsPreProcessorTest {
     @Mock
     private OffenceRepository offenceRepository;
 
-
     @Test
-    public void testApplicationFlagAndASNSeqForNewApplication() {
+    void testApplicationFlagAndASNSeqForNewApplication() {
 
-        //given
-        HearingResulted laaHearingDetails = HearingResulted.builder().maatId(12345)
+        // given
+        HearingResulted laaHearingDetails = HearingResulted.builder()
+                .maatId(12345)
                 .jurisdictionType(JurisdictionType.CROWN)
                 .defendant(getDefendant())
                 .build();
 
-        //when
+        // when
         List<WqLinkRegisterEntity> wqLinkRegisterEntities = Collections.singletonList(WqLinkRegisterEntity.builder()
                 .caseId(565)
-                .proceedingId(12121).maatId(12345).build());
+                .proceedingId(12121)
+                .maatId(12345)
+                .build());
         Mockito.when(wqLinkRegisterRepository.findBymaatId(12345)).thenReturn(wqLinkRegisterEntities);
 
-        Mockito.when(xlatOffenceRepository.findById(any())).thenReturn(Optional.of(XLATOffenceEntity.builder().applicationFlag(1).build()));
+        Mockito.when(xlatOffenceRepository.findById(any()))
+                .thenReturn(Optional.of(
+                        XLATOffenceEntity.builder().applicationFlag(1).build()));
 
         courtApplicationsPreProcessor.process(laaHearingDetails);
 
-        //then
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getAsnSeq()).isEqualTo("1000");
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getApplicationFlag()).isEqualTo(1);
+        // then
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getAsnSeq())
+                .isEqualTo("1000");
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getApplicationFlag())
+                .isEqualTo(1);
     }
 
-
     @Test
-    public void testApplicationFlagAndASNSeqForExistingApplication() {
+    void testApplicationFlagAndASNSeqForExistingApplication() {
 
-        //given
-        HearingResulted laaHearingDetails = HearingResulted.builder().maatId(12345)
+        // given
+        HearingResulted laaHearingDetails = HearingResulted.builder()
+                .maatId(12345)
                 .jurisdictionType(JurisdictionType.CROWN)
                 .defendant(getDefendant())
                 .build();
 
-        //when
+        // when
         List<WqLinkRegisterEntity> wqLinkRegisterEntities = Collections.singletonList(WqLinkRegisterEntity.builder()
                 .caseId(565)
-                .proceedingId(12121).maatId(12345).build());
+                .proceedingId(12121)
+                .maatId(12345)
+                .build());
         Mockito.when(wqLinkRegisterRepository.findBymaatId(12345)).thenReturn(wqLinkRegisterEntities);
 
-        Mockito.when(xlatOffenceRepository.findById(any())).thenReturn(Optional.of(XLATOffenceEntity.builder().applicationFlag(1).build()));
+        Mockito.when(xlatOffenceRepository.findById(any()))
+                .thenReturn(Optional.of(
+                        XLATOffenceEntity.builder().applicationFlag(1).build()));
 
-        Mockito.when(offenceRepository.findApplicationByOffenceCode(any(), any(), any())).thenReturn(Optional.of(OffenceEntity.builder().applicationFlag(1).asnSeq("1006").build()));
+        Mockito.when(offenceRepository.findApplicationByOffenceCode(any(), any(), any()))
+                .thenReturn(Optional.of(OffenceEntity.builder()
+                        .applicationFlag(1)
+                        .asnSeq("1006")
+                        .build()));
 
         courtApplicationsPreProcessor.process(laaHearingDetails);
 
-        //then
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getAsnSeq()).isEqualTo("1006");
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getApplicationFlag()).isEqualTo(1);
+        // then
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getAsnSeq())
+                .isEqualTo("1006");
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getApplicationFlag())
+                .isEqualTo(1);
     }
 
-
     @Test
-    public void testApplicationFuncWhenNoMAATId() {
+    void testApplicationFuncWhenNoMAATId() {
 
-        //given
-        HearingResulted laaHearingDetails = HearingResulted.builder().maatId(12345)
+        // given
+        HearingResulted laaHearingDetails = HearingResulted.builder()
+                .maatId(12345)
                 .jurisdictionType(JurisdictionType.CROWN)
                 .defendant(getDefendant())
                 .build();
 
-        //when
+        // when
 
         Mockito.when(wqLinkRegisterRepository.findBymaatId(any())).thenReturn(new ArrayList<>());
-        Mockito.when(xlatOffenceRepository.findById(any())).thenReturn(Optional.of(XLATOffenceEntity.builder().applicationFlag(1).build()));
+        Mockito.when(xlatOffenceRepository.findById(any()))
+                .thenReturn(Optional.of(
+                        XLATOffenceEntity.builder().applicationFlag(1).build()));
 
         courtApplicationsPreProcessor.process(laaHearingDetails);
 
-        //then
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getAsnSeq()).isNull();
-
+        // then
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getAsnSeq())
+                .isNull();
     }
 
     @Test
-    public void testAppFuncWhenNoOffenceCode() {
+    void testAppFuncWhenNoOffenceCode() {
 
-        //given
-        HearingResulted laaHearingDetails = HearingResulted.builder().maatId(12345)
+        // given
+        HearingResulted laaHearingDetails = HearingResulted.builder()
+                .maatId(12345)
                 .jurisdictionType(JurisdictionType.CROWN)
                 .defendant(getDefendant())
                 .build();
-        laaHearingDetails.getDefendant().getOffences().get(0).setOffenceCode(null);
+        laaHearingDetails.getDefendant().getOffences().getFirst().setOffenceCode(null);
 
-        //when
+        // when
 
         Mockito.when(wqLinkRegisterRepository.findBymaatId(any())).thenReturn(new ArrayList<>());
 
         courtApplicationsPreProcessor.process(laaHearingDetails);
 
-        //then
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getApplicationFlag()).isNull();
-
-
+        // then
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getApplicationFlag())
+                .isNull();
     }
 
-
     @Test
-    public void testApplicationFlagAndASNSeqForENewAndExistingApplication() {
+    void testApplicationFlagAndASNSeqForENewAndExistingApplication() {
 
-        Offence off = Offence.builder().legalAidStatus("AP")
+        Offence off = Offence.builder()
+                .legalAidStatus("AP")
                 .offenceCode("123")
                 .offenceId("Offence ID")
                 .legalAidReason("some aid reason")
                 .build();
 
-        //given
-        HearingResulted laaHearingDetails = HearingResulted.builder().maatId(12345)
+        // given
+        HearingResulted laaHearingDetails = HearingResulted.builder()
+                .maatId(12345)
                 .jurisdictionType(JurisdictionType.CROWN)
                 .defendant(getDefendant())
                 .build();
         List<Offence> offenceList = Arrays.asList(off, getOffence());
 
-
         laaHearingDetails.getDefendant().setOffences(offenceList);
 
-        //when
+        // when
         List<WqLinkRegisterEntity> wqLinkRegisterEntities = Collections.singletonList(WqLinkRegisterEntity.builder()
                 .caseId(565)
-                .proceedingId(12121).maatId(12345).build());
+                .proceedingId(12121)
+                .maatId(12345)
+                .build());
         Mockito.when(wqLinkRegisterRepository.findBymaatId(12345)).thenReturn(wqLinkRegisterEntities);
 
-        Mockito.when(xlatOffenceRepository.findById(any())).thenReturn(Optional.of(XLATOffenceEntity.builder().applicationFlag(1).build()));
-
-      //  Mockito.when(offenceRepository.findApplicationByOffenceCode(565, "23224", 1)).thenReturn(Optional.of(OffenceEntity.builder().applicationFlag(1).asnSeq("1006").build()));
+        Mockito.when(xlatOffenceRepository.findById(any()))
+                .thenReturn(Optional.of(
+                        XLATOffenceEntity.builder().applicationFlag(1).build()));
 
         courtApplicationsPreProcessor.process(laaHearingDetails);
 
-        //then
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getAsnSeq()).isNotNull();
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(1).getAsnSeq()).isNotNull();
-        assertThat(laaHearingDetails.getDefendant().getOffences().get(0).getApplicationFlag()).isEqualTo(1);
+        // then
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getAsnSeq())
+                .isNotNull();
+        assertThat(laaHearingDetails.getDefendant().getOffences().get(1).getAsnSeq())
+                .isNotNull();
+        assertThat(laaHearingDetails.getDefendant().getOffences().getFirst().getApplicationFlag())
+                .isEqualTo(1);
     }
-
 
     private Defendant getDefendant() {
 
         return Defendant.builder()
-                .offences(Collections.singletonList(
-                        getOffence()))
+                .offences(Collections.singletonList(getOffence()))
                 .build();
     }
 
     private Offence getOffence() {
-        return Offence.builder().legalAidStatus("AP")
+        return Offence.builder()
+                .legalAidStatus("AP")
                 .offenceCode("23224")
                 .offenceId("Offence ID")
                 .legalAidReason("some aid reason")
-                .results(Collections.singletonList(Result.builder().resultCode("3026").build()))
+                .results(Collections.singletonList(
+                        Result.builder().resultCode("3026").build()))
                 .build();
     }
-
 }
