@@ -1,7 +1,7 @@
 package gov.uk.courtdata.integration.applicant;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import gov.uk.MAATCourtDataApplication;
 import gov.uk.courtdata.applicant.dto.ApplicantDisabilitiesDTO;
@@ -11,15 +11,18 @@ import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
 import gov.uk.courtdata.exception.RequestedObjectNotFoundException;
 import gov.uk.courtdata.integration.util.MockMvcIntegrationTest;
+import lombok.extern.slf4j.Slf4j;
+
 import java.util.NoSuchElementException;
 import java.util.Optional;
-import lombok.extern.slf4j.Slf4j;
+
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+
 @Slf4j
 @SpringBootTest(classes = {MAATCourtDataApplication.class})
-public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrationTest {
+class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrationTest {
     private static final Integer INVALID_ID = 2345;
 
     @Autowired
@@ -28,7 +31,7 @@ public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrat
     @Test
     void givenValidId_WhenGetApplicantDisabilitiesIsInvoked_thenCorrectResponseIsReturned() {
         createApplicantDisabilities();
-        Integer id = repos.applicantDisabilities.findAll().get(0).getId();
+        Integer id = repos.applicantDisabilities.findAll().getFirst().getId();
         ApplicantDisabilitiesDTO applicantDisabilitiesDTO = applicantDisabilitiesService.find(id);
         assertThat(applicantDisabilitiesDTO.getDisaDisability()).isNotBlank();
     }
@@ -43,8 +46,7 @@ public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrat
     @Test
     void givenAValidInput_whenCreateApplicantDisabilitiesIsInvoked_thenCreateIsSuccess() {
         ApplicantDisabilitiesDTO recordToCreate = TestModelDataBuilder.getApplicantDisabilitiesDTO();
-        ApplicantDisabilitiesDTO applicantDisabilitiesDTO = applicantDisabilitiesService
-                .create(recordToCreate);
+        ApplicantDisabilitiesDTO applicantDisabilitiesDTO = applicantDisabilitiesService.create(recordToCreate);
         assertThat(applicantDisabilitiesDTO.getId()).isGreaterThan(0);
         assertThat(applicantDisabilitiesDTO.getDisaDisability()).isEqualTo(recordToCreate.getDisaDisability());
         assertThat(applicantDisabilitiesDTO.getApplId()).isEqualTo(recordToCreate.getApplId());
@@ -53,10 +55,9 @@ public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrat
     @Test
     void givenAValidInput_whenUpdateApplicantDisabilitiesIsInvoked_thenUpdateIsSuccess() {
         createApplicantDisabilities();
-        Integer id = repos.applicantDisabilities.findAll().get(0).getId();
+        Integer id = repos.applicantDisabilities.findAll().getFirst().getId();
         ApplicantDisabilitiesDTO recordToUpdate = TestModelDataBuilder.getApplicantDisabilitiesDTO(id);
-        ApplicantDisabilitiesDTO applicantDisabilitiesDTO = applicantDisabilitiesService
-                .update(recordToUpdate);
+        ApplicantDisabilitiesDTO applicantDisabilitiesDTO = applicantDisabilitiesService.update(recordToUpdate);
         assertThat(applicantDisabilitiesDTO.getId()).isEqualTo(recordToUpdate.getId());
         assertThat(applicantDisabilitiesDTO.getDisaDisability()).isEqualTo(recordToUpdate.getDisaDisability());
         assertThat(applicantDisabilitiesDTO.getApplId()).isEqualTo(recordToUpdate.getApplId());
@@ -64,8 +65,8 @@ public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrat
 
     @Test
     void givenAInValidInput_whenUpdateApplicantDisabilitiesIsInvoked_thenExceptionIsRaised() {
-        assertThatThrownBy(() -> applicantDisabilitiesService
-                .update(TestModelDataBuilder.getApplicantDisabilitiesDTO(INVALID_ID)))
+        var request = TestModelDataBuilder.getApplicantDisabilitiesDTO(INVALID_ID);
+        assertThatThrownBy(() -> applicantDisabilitiesService.update(request))
                 .isInstanceOf(RequestedObjectNotFoundException.class)
                 .hasMessageContaining("Applicant Disability details not found for id");
     }
@@ -73,16 +74,15 @@ public class ApplicantDisabilitiesServiceIntegrationTest extends MockMvcIntegrat
     @Test
     void givenAValidInput_whenDeleteApplicantDisabilitiesIsInvoked_thenDeleteIsSuccess() {
         createApplicantDisabilities();
-        Integer id = repos.applicantDisabilities.findAll().get(0).getId();
+        Integer id = repos.applicantDisabilities.findAll().getFirst().getId();
         applicantDisabilitiesService.delete(id);
-        Optional<ApplicantDisabilitiesEntity> record = repos.applicantDisabilities.findById(id);
-        assertThatThrownBy(record::get).isInstanceOf(NoSuchElementException.class)
+        Optional<ApplicantDisabilitiesEntity> foundRecord = repos.applicantDisabilities.findById(id);
+        assertThatThrownBy(foundRecord::get)
+                .isInstanceOf(NoSuchElementException.class)
                 .hasMessageContaining("No value present");
-
     }
 
     private void createApplicantDisabilities() {
         repos.applicantDisabilities.save(TestEntityDataBuilder.getApplicantDisabilitiesEntity());
     }
-
 }
