@@ -1,7 +1,7 @@
 package gov.uk.courtdata.integration.contribution;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import gov.uk.MAATCourtDataApplication;
 import gov.uk.courtdata.builder.TestEntityDataBuilder;
@@ -14,20 +14,22 @@ import gov.uk.courtdata.entity.ContributionsEntity;
 import gov.uk.courtdata.entity.RepOrderEntity;
 import gov.uk.courtdata.exception.RequestedObjectNotFoundException;
 import gov.uk.courtdata.integration.util.MockMvcIntegrationTest;
+import uk.gov.justice.laa.crime.common.model.contribution.maat_api.CreateContributionRequest;
+
 import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.dao.DataAccessException;
-import uk.gov.justice.laa.crime.common.model.contribution.maat_api.CreateContributionRequest;
 
 @SpringBootTest(classes = {MAATCourtDataApplication.class})
 class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
 
     private static final Integer INVALID_REP_ID = 9999;
-    public Integer REP_ID = 1234;
+    public Integer repId = 1234;
 
     @Autowired
     private ContributionsService contributionsService;
@@ -35,11 +37,10 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
     private ContributionsEntity contributionsEntity;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
 
-        RepOrderEntity repOrderEntity = repos.repOrder.saveAndFlush(
-            TestEntityDataBuilder.getPopulatedRepOrder());
-        REP_ID = repOrderEntity.getId();
+        RepOrderEntity repOrderEntity = repos.repOrder.saveAndFlush(TestEntityDataBuilder.getPopulatedRepOrder());
+        repId = repOrderEntity.getId();
 
         ContributionsEntity contributions = TestEntityDataBuilder.getContributionsEntity();
         contributions.setRepOrder(repOrderEntity);
@@ -53,10 +54,10 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
 
     @Test
     void givenValidRepId_WhenFindIsInvoked_thenCorrectResponseIsReturned() {
-        List<ContributionsDTO> result = contributionsService.find(REP_ID, true);
-        assertThat(result.isEmpty()).isFalse();
-        assertThat(result.get(0).getId()).isGreaterThan(0);
-        assertThat(result.get(0).getRepId()).isEqualTo(REP_ID);
+        List<ContributionsDTO> result = contributionsService.find(repId, true);
+        assertThat(result).isNotEmpty();
+        assertThat(result.getFirst().getId()).isGreaterThan(0);
+        assertThat(result.getFirst().getRepId()).isEqualTo(repId);
     }
 
     @Test
@@ -68,7 +69,7 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
 
     @Test
     void givenValidData_WhenCreateIsInvoked_thenCorrectResponseIsReturned() {
-        CreateContributionRequest createContributions = TestModelDataBuilder.getCreateContributions(REP_ID);
+        CreateContributionRequest createContributions = TestModelDataBuilder.getCreateContributions(repId);
         ContributionsDTO result = contributionsService.create(createContributions);
         assertThat(result).isNotNull();
         assertThat(result.getId()).isGreaterThan(0);
@@ -77,11 +78,10 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
 
     @Test
     void givenInValidData_WhenCreateIsInvoked_thenCorrectResponseIsReturned() {
-        assertThatThrownBy(() -> {
-            CreateContributionRequest createContributions = TestModelDataBuilder.getCreateContributions(REP_ID);
-            createContributions.setRepId(INVALID_REP_ID);
-            contributionsService.create(createContributions);
-        }).isInstanceOf(DataAccessException.class);
+        CreateContributionRequest createContributions = TestModelDataBuilder.getCreateContributions(repId);
+        createContributions.setRepId(INVALID_REP_ID);
+        assertThatThrownBy(() -> contributionsService.create(createContributions))
+                .isInstanceOf(DataAccessException.class);
     }
 
     @Test
@@ -90,8 +90,8 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
         ContributionFilesEntity contributionFilesEntity = TestEntityDataBuilder.getContributionFilesEntity();
         contributionFilesEntity.setFileId(contributionsEntity.getContributionFileId());
         repos.contributionFiles.saveAndFlush(contributionFilesEntity);
-        List<ContributionsSummaryDTO> contributionsSummary = contributionsService.getContributionsSummary(REP_ID);
-        assertThat(contributionsSummary.isEmpty()).isFalse();
+        List<ContributionsSummaryDTO> contributionsSummary = contributionsService.getContributionsSummary(repId);
+        assertThat(contributionsSummary).isNotEmpty();
     }
 
     @Test
@@ -100,5 +100,4 @@ class ContributionsServiceIntegrationTest extends MockMvcIntegrationTest {
                 .isInstanceOf(RequestedObjectNotFoundException.class)
                 .hasMessageContaining("No contribution entries found for repId");
     }
-
 }
