@@ -1,38 +1,50 @@
 package gov.uk.courtdata.offence.helper;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.atLeast;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import gov.uk.courtdata.entity.OffenceEntity;
 import gov.uk.courtdata.entity.WqLinkRegisterEntity;
 import gov.uk.courtdata.offence.model.OffenceSummary;
 import gov.uk.courtdata.offence.model.Plea;
-import gov.uk.courtdata.repository.*;
+import gov.uk.courtdata.repository.OffenceRepository;
+import gov.uk.courtdata.repository.ResultRepository;
+import gov.uk.courtdata.repository.WQOffenceRepository;
+import gov.uk.courtdata.repository.WQResultRepository;
+import gov.uk.courtdata.repository.WqLinkRegisterRepository;
+import gov.uk.courtdata.repository.XLATResultRepository;
+
+import java.util.List;
+import java.util.UUID;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
-import java.util.UUID;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.*;
-
 @ExtendWith(MockitoExtension.class)
-public class OffenceHelperTest {
+class OffenceHelperTest {
 
     @InjectMocks
     private OffenceHelper offenceHelper;
 
     @Mock
     private OffenceRepository offenceRepository;
+
     @Mock
     private WQResultRepository wqResultRepository;
+
     @Mock
     private ResultRepository resultRepository;
+
     @Mock
     private XLATResultRepository xlatResultRepository;
+
     @Mock
     private WQOffenceRepository wqOffenceRepository;
 
@@ -40,69 +52,74 @@ public class OffenceHelperTest {
     private WqLinkRegisterRepository wqLinkRegisterRepository;
 
     @Test
-    public void testWhenOffenceResultIsCommittal_thenReturnTrue() {
+    void testWhenOffenceResultIsCommittal_thenReturnTrue() {
 
         when(offenceRepository.findByCaseId(anyInt())).thenReturn(getOffenceEntity());
-        when(wqLinkRegisterRepository.findBymaatId(anyInt())).thenReturn(List.of(WqLinkRegisterEntity.builder().maatId(123).caseId(456).build()));
-        when(xlatResultRepository.findResultsByWQType(anyInt(), anyInt())).thenReturn(List.of(4057, 4558, 4559, 4560, 4561, 4562, 4564, 4567, 4593, 1290));
+        when(wqLinkRegisterRepository.findBymaatId(anyInt()))
+                .thenReturn(List.of(
+                        WqLinkRegisterEntity.builder().maatId(123).caseId(456).build()));
+        when(xlatResultRepository.findResultsByWQType(anyInt(), anyInt()))
+                .thenReturn(List.of(4057, 4558, 4559, 4560, 4561, 4562, 4564, 4567, 4593, 1290));
 
-        when(resultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString())).thenReturn(List.of(4057, 4558));
+        when(resultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString()))
+                .thenReturn(List.of(4057, 4558));
 
-        when(wqResultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString())).thenReturn(List.of(4057, 4558));
+        when(wqResultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString()))
+                .thenReturn(List.of(4057, 4558));
 
         List<OffenceSummary> offenceSummaryList = offenceHelper.getTrialOffences(getOffenceSummary(), 12121);
 
         verify(offenceRepository).findByCaseId(anyInt());
-        verify(xlatResultRepository,atLeast(2)).findResultsByWQType(anyInt(), anyInt());
-        assertEquals(1, offenceSummaryList.size());
-        assertEquals(UUID.fromString("e2540d98-995f-43f2-97e4-f712b8a5d6a6"), offenceSummaryList.get(0).getOffenceId());
-
+        verify(xlatResultRepository, atLeast(2)).findResultsByWQType(anyInt(), anyInt());
+        assertThat(offenceSummaryList).hasSize(1);
+        assertThat(offenceSummaryList.getFirst().getOffenceId())
+                .isEqualTo(UUID.fromString("e2540d98-995f-43f2-97e4-f712b8a5d6a6"));
     }
 
     @Test
-    public void testWhenOffenceResultIsNotCommittal_thenReturnFalse() {
+    void testWhenOffenceResultIsNotCommittal_thenReturnFalse() {
 
         when(offenceRepository.findByCaseId(anyInt())).thenReturn(getOffenceEntity());
-        when(wqLinkRegisterRepository.findBymaatId(anyInt())).thenReturn(List.of(WqLinkRegisterEntity.builder().maatId(123).caseId(456).build()));
-        when(xlatResultRepository.findResultsByWQType(anyInt(), anyInt())).thenReturn(List.of(4057, 4558, 4559, 4560, 4561, 4562, 4564, 4567, 4593, 1290));
+        when(wqLinkRegisterRepository.findBymaatId(anyInt()))
+                .thenReturn(List.of(
+                        WqLinkRegisterEntity.builder().maatId(123).caseId(456).build()));
+        when(xlatResultRepository.findResultsByWQType(anyInt(), anyInt()))
+                .thenReturn(List.of(4057, 4558, 4559, 4560, 4561, 4562, 4564, 4567, 4593, 1290));
 
-        when(resultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString())).thenReturn(List.of(453, 454));
+        when(resultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString()))
+                .thenReturn(List.of(453, 454));
 
-        when(wqResultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString())).thenReturn(List.of(6665, 6666));
-
+        when(wqResultRepository.findResultCodeByCaseIdAndAsnSeq(anyInt(), anyString()))
+                .thenReturn(List.of(6665, 6666));
 
         List<OffenceSummary> offenceSummaryList = offenceHelper.getTrialOffences(getOffenceSummary(), 12121);
 
         verify(offenceRepository).findByCaseId(anyInt());
-        verify(xlatResultRepository,atLeast(2)).findResultsByWQType(anyInt(), anyInt());
-        assertEquals(0, offenceSummaryList.size());
-
+        verify(xlatResultRepository, atLeast(2)).findResultsByWQType(anyInt(), anyInt());
+        assertThat(offenceSummaryList).isEmpty();
     }
 
     private List<OffenceEntity> getOffenceEntity() {
-        return
-                List.of(
-                        OffenceEntity.builder()
-                                .offenceId("e2540d98-995f-43f2-97e4-f712b8a5d6a6")
-                                .asnSeq("001")
-                                .caseId(12121)
-                                .applicationFlag(1)
-                                .build(),
-                        OffenceEntity.builder()
-                                .offenceId("908ad01e-5a38-4158-957a-0c1d1a783862")
-                                .asnSeq("002")
-                                .caseId(12121)
-                                .build());
+        return List.of(
+                OffenceEntity.builder()
+                        .offenceId("e2540d98-995f-43f2-97e4-f712b8a5d6a6")
+                        .asnSeq("001")
+                        .caseId(12121)
+                        .applicationFlag(1)
+                        .build(),
+                OffenceEntity.builder()
+                        .offenceId("908ad01e-5a38-4158-957a-0c1d1a783862")
+                        .asnSeq("002")
+                        .caseId(12121)
+                        .build());
     }
 
     private List<OffenceSummary> getOffenceSummary() {
 
-        return List.of(
-                OffenceSummary.builder()
-                        .offenceCode("1212")
-                        .offenceId(UUID.fromString("e2540d98-995f-43f2-97e4-f712b8a5d6a6"))
-                        .plea(Plea.builder().value("NOT_GUILTY").pleaDate("2021-11-12").build())
-                        .build()
-        );
+        return List.of(OffenceSummary.builder()
+                .offenceCode("1212")
+                .offenceId(UUID.fromString("e2540d98-995f-43f2-97e4-f712b8a5d6a6"))
+                .plea(Plea.builder().value("NOT_GUILTY").pleaDate("2021-11-12").build())
+                .build());
     }
 }
